--- a/notebooks/Toxicity data -Copy1.ipynb
+++ b/notebooks/Toxicity data -Copy1.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ellie\\Miniconda3\\lib\\site-packages\\ipykernel\\parentpoller.py:116: UserWarning: Parent poll failed.  If the frontend dies,\n",
+      "                the kernel may be left running.  Please let us know\n",
+      "                about your system (bitness, Python, etc.) at\n",
+      "                ipython-dev@scipy.org\n",
+      "  ipython-dev@scipy.org\"\"\")\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import cirpy as cpy\n",
@@ -1525,7 +1537,7 @@
     "x_train_res = pd.DataFrame(x_train_res)\n",
     "y_train_res = pd.DataFrame(y_train_res)\n",
     "x_test = pd.DataFrame(x_test)\n",
-    "x_test = pd.DataFrame(y_test)"
+    "y_test = pd.DataFrame(y_test)"
    ]
   },
   {
