trying to get gan to work

--- a/notebooks/bdrug_workingNeural Network-Copy1.ipynb
+++ b/notebooks/bdrug_workingNeural Network-Copy1.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "what do i need to do?\n",
+    "\n",
+    "I need to:\n",
+    "    * make a basic gan out of biodeg\n",
+    "    * make a basic gan out of druglike\n",
+    "    * figure out the predictors that are being used for biodegradability\n",
+    "        * try out those descriptors for predictive power on the druglike set \n",
+    "        * (also, do I want to make a bigger druglike set?)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +114,26 @@
     "test_y = test_y.drop(['Unnamed: 0'], axis=1)\n",
     "y_test = encode(test_y)\n",
     "#y_test = encode(test_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1626, 280)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.shape"
    ]
   },
   {
